--- a/android/build.gradle
+++ b/android/build.gradle
@@ -56,4 +56,21 @@ repositories {
 dependencies {
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    
+    implementation 'com.github.piasy:BigImageViewer:1.8.1'
+
+    // load with fresco
+    implementation 'com.github.piasy:FrescoImageLoader:1.8.1'
+
+    // load with glide
+    implementation 'com.github.piasy:GlideImageLoader:1.8.1'
+
+    // progress pie indicator
+    implementation 'com.github.piasy:ProgressPieIndicator:1.8.1'
+
+    // support thumbnail, gif and webp with Fresco
+    implementation 'com.github.piasy:FrescoImageViewFactory:1.8.1'
+
+    // support thumbnail and gif with Glide
+    implementation 'com.github.piasy:GlideImageViewFactory:1.8.1'
 }
